# Bot-On

./: .replit  nixpacks.toml  pyproject.toml  railway.json
.agents/: agent_assets_metadata.toml
bot/: README.md  bot.py  config.json  database_template.json  disnake-2.11.0a81+geba3b43f-py3-none-any.whl  requirements.txt  squarecloud.config  startup.py  verify_syntax.py
bot/commands/: __init__.py
bot/configs/: config_api.json  config_emoji.json  config_extensions.json  config_mongo.json  config_plan.json  config_socket.json  config_websocket.json
bot/connections/: __init__.py  http_polling.py  hybrid_manager.py  mongo_db.py  socketio_manager.py  websocket_manager.py  ws_manager.py
bot/core/: __init__.py  change_bio.py  change_status.py  create_bot.py  enable_intents.py  log_restart.py  server_protection.py  toggle_intents.py
bot/database/: backup_configs.json  plan_config.json
bot/events/: __init__.py  _common.py  boost_websocket_ready.py  interaction_monitor.py  on_command.py  on_guild_channel_create.py  on_guild_channel_delete.py  on_guild_channel_update.py  on_guild_role_create.py  on_guild_role_delete.py  on_member_ban.py  on_member_join.py  on_member_remove.py  on_member_update_permissions.py  on_member_update_roles.py  on_member_update_timeout.py  on_message_delete.py  on_message_edit.py  on_ready.py  on_voice_state_update.py  websocket_ready.py
bot/functions/: __init__.py  ai_api.py  database.py  email_utils.py  emoji.py  loja_products.py  message.py  perms.py  plan.py  plans.py  receipt_generator.py  server_check.py  text_utils.py  utils.py  (+2 more)
(+556 files in other folders)
