[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "aiohttp>=3.14.1",
    "disnake",
    "dnspython>=2.8.0",
    "matplotlib>=3.11.1",
    "pillow>=12.3.0",
    "psutil>=7.2.2",
    "py-discord-html-transcripts>=2.3.1",
    "pyjwt>=2.13.0",
    "pymongo>=4.17.0",
    "pynacl>=1.6.2",
    "python-socketio>=5.16.3",
    "pytz>=2026.2",
    "requests>=2.34.2",
    "websockets>=16.1.1",
]

[tool.uv.sources]
disnake = { path = "bot/disnake-2.11.0a81+geba3b43f-py3-none-any.whl" }
